--- a/www/index.html
+++ b/www/index.html
@@ -137,7 +137,7 @@
     <div class="block">
       <div class="ui-bar ui-bar-a" style="height:100%">
 
-        <a id="img" href="" onclick="getPhoto(pictureSource.PHOTOLIBRARY);">
+        <a id="img" href="" onclick="(pictureSource.PHOTOLIBRARY);">
           <center><i class="fa fa-picture-o fa-5x"></i></center>
         </a>
       </div>
